adding parameter for wiping all disks | adding host selector for each HetznerBareMetalMachineTemplate | restructuring | bug fixes
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HCloudMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HCloudMachineTemplate.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   template:
     spec:
-      imageName: {{ .Values.imageName }}
+      imageName: {{ .Values.hcloud.imageName }}
       placementGroupName: control-plane
-      type: {{ .Values.controlPlane.machineType }}
+      type: {{ .Values.controlPlane.hcloud.machineType }}
 {{- end }}
 
 {{/* Handling node-groups in HCloud. */}}
@@ -23,7 +23,7 @@ metadata:
 spec:
   template:
     spec:
-      imageName: {{ $.Values.imageName }}
+      imageName: {{ $.Values.hcloud.imageName }}
       placementGroupName: {{ $nodeGroup.name }}
       type: {{ $nodeGroup.machineType }}
 {{- end }}
