--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerCluster.yaml
@@ -6,7 +6,7 @@ metadata:
     cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
 spec:
   controlPlaneEndpoint:
-    host: {{ (.Values.controlPlane.endpoint).host | default "" | quote }}
+    host: {{ (.Values.controlPlane.bareMetal.endpoint).host | default "" }}
     port: 6443
 
   controlPlaneRegions: {{ toYaml .Values.controlPlane.regions | nindent 4 }}
@@ -14,17 +14,15 @@ spec:
 {{/* Handling control-plane in HCloud */}}
 {{- if or (eq .Values.mode "hcloud") (eq .Values.mode "hybrid") }}
 
-  {{- if (.Values.controlPlane.loadBalancer).enabled }}
+  {{- if (.Values.controlPlane.hcloud.loadBalancer).enabled }}
   controlPlaneLoadBalancer:
     enabled: true
-    region: {{ .Values.controlPlane.loadBalancer.region }}
+    region: {{ .Values.controlPlane.hcloud.loadBalancer.region }}
   {{- end }}
 
-  {{- if (.Values.network).enabled }}
   hcloudNetwork:
     enabled: true
-    networkZone: {{ .Values.zone }}
-  {{- end }}
+    networkZone: {{ .Values.hcloud.zone }}
 
 {{- end }}
 
@@ -64,7 +62,12 @@ spec:
     # Kubernetes cluster).
     # NOTE : Each SSH Key is cluster wide.
     hcloud:
-      - name: {{ .Values.hcloudSSHKeyPairName }}
+      {{- if or (eq .Values.mode "hcloud") (eq .Values.mode "hybrid") }}
+      - name: {{ .Values.hcloud.sshKeyPairName }}
+      {{- end }}
+      {{- if or (eq .Values.mode "bare-metal") (eq .Values.mode "hybrid") }}
+      - name: {{ .Values.bareMetal.sshKeyPair.name }}
+      {{- end }}
     {{- if or (eq .Values.mode "bare-metal") (eq .Values.mode "hybrid") }}
     # Defines the reference to the secret where the SSH key for the rescue system is stored.
     # Make sure, that any other HCloud SSH Key with this name doesn't exist.
@@ -73,5 +76,5 @@ spec:
         name: sshkey-name
         privateKey: ssh-privatekey
         publicKey: ssh-publickey
-      name: {{ .Values.rescueSSHKeyPairSecretName }}
+      name: {{ .Values.bareMetal.sshKeyPair.secretName }}
     {{- end }}
