--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
@@ -1,6 +1,6 @@
 {{/* Handling control-plane in Hetzner Bare Metal. */}}
 {{- if eq .Values.mode "bare-metal" }}
-{{- range $bareMetalHostIndex, $bareMetalHost := $.Values.controlPlane.bareMetalHosts }}
+{{- range $bareMetalHostIndex, $bareMetalHost := $.Values.controlPlane.bareMetal.bareMetalHosts }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: HetznerBareMetalHost
@@ -8,8 +8,10 @@ metadata:
   name: {{ $bareMetalHost.serverID | quote }}
   labels:
     role: {{ $.Values.global.clusterName }}-control-plane
+  {{- if $.Values.bareMetal.wipeDisks }}
   annotations:
     capi.syself.com/wipe-disk: all
+  {{- end }}
 spec:
   serverID: {{ $bareMetalHost.serverID }}
   rootDeviceHints:
@@ -34,8 +36,10 @@ metadata:
   name: {{ $bareMetalHost.serverID | quote }}
   labels:
     role: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
+  {{- if $.Values.bareMetal.wipeDisks }}
   annotations:
     capi.syself.com/wipe-disk: all
+  {{- end }}
 spec:
   serverID: {{ $bareMetalHost.serverID }}
   rootDeviceHints:
