--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
@@ -275,16 +275,16 @@ spec:
           --set cilium.k8sServicePort=${API_SERVER_PORT} \
           --namespace cilium | kubectl apply -f -
 
-      # Install Hetzner Cloud Controller Manager.
       {{- if or (eq .Values.mode "hcloud") (eq .Values.mode "hybrid") }}
+      # Install HCloud Cloud Controller Manager.
       - |
         helm template ccm-hcloud kubeaid/argocd-helm-charts/ccm-hcloud \
           --values kubeaid/argocd-helm-charts/ccm-hcloud/values.yaml \
           --namespace kube-system | kubectl apply -f -
       {{- end }}
 
-
       {{- if or (eq .Values.mode "bare-metal") (eq .Values.mode "hybrid") }}
+      # Install Hetzner Bare Metal Cloud Controller Manager.
       - |
         helm template ccm-hetzner kubeaid/argocd-helm-charts/ccm-hetzner \
           --values kubeaid/argocd-helm-charts/ccm-hetzner/values.yaml \
