--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalMachineTemplate.yaml
@@ -35,6 +35,14 @@ spec:
             size: 30G
         postInstallScript: |
           #!/bin/bash
+          {{/*
+            Netplan is the default network configuration utility on Ubuntu. It configures network
+            interfaces using YAML files, which are then translated into systemd-networkd or
+            NetworkManager configurations.
+
+            Using Netplan, we'll bind the Floating IP with the master node's primary network
+            interface.
+          */}}
           {{- if (.Values.controlPlane.bareMetal.endpoint).host }}
           wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           chmod a+x /usr/local/bin/yq
@@ -109,22 +117,6 @@ spec:
             size: 30G
         postInstallScript: |
           #!/bin/bash
-          {{- if (.Values.controlPlane.bareMetal.endpoint).host }}
-          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          chmod a+x /usr/local/bin/yq
-          touch /etc/netplan/60-floating-ip.yaml && chmod 600 /etc/netplan/60-floating-ip.yaml
-          interface_name=$(/usr/local/bin/yq '.network.ethernets.[] | key' /etc/netplan/01-netcfg.yaml)
-          cat << EOT > /etc/netplan/60-floating-ip.yaml
-          # Floating IP from Hetzner
-          network:
-            version: 2
-            renderer: networkd
-            ethernets:
-              $interface_name:
-                addresses:
-                  - {{ (.Values.controlPlane.bareMetal.endpoint).host }}/32
-          EOT
-          {{- end }}
           mkdir -p /etc/cloud/cloud.cfg.d && touch /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           echo "network: { config: disabled }" > /etc/cloud/cloud.cfg.d/99-custom-networking.cfg
           apt-get update && apt-get install -y cloud-init apparmor apparmor-utils
