--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmConfigTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmConfigTemplate.yaml
@@ -160,7 +160,7 @@ spec:
 
 {{/* Handling node-groups in Hetzner Bare Metal. */}}
 {{- if or (eq .Values.mode "bare-metal") (eq .Values.mode "hybrid") }}
-{{- range $nodeGroupIndex, $nodeGroup := $.Values.nodeGroups.hcloud }}
+{{- range $nodeGroupIndex, $nodeGroup := $.Values.nodeGroups.bareMetal }}
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
