--- a/argocd-helm-charts/netbird/charts/netbird/Chart.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/Chart.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: v2
-name: netbird
+appVersion: 0.46.0
 description: NetBird VPN management platform
-type: application
-version: 1.6.1
-appVersion: "0.36.5"
 icon: https://images.crunchbase.com/image/upload/c_pad,h_256,w_256,f_auto,q_auto:eco,dpr_1/kuu5tm1wt09ztp6ctlag
+name: netbird
+type: application
+version: 1.8.0
