--- a/argocd-helm-charts/netbird/charts/netbird/values.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/values.yaml
@@ -28,7 +28,7 @@ management:
       - --log-file=console
       - --log-level=info
       - --disable-anonymous-metrics=false
-      - --single-account-mode-domain=netbird.example.com
+      - --single-account-mode-domain=netbird.selfhosted
       - --dns-domain=netbird.selfhosted
 
   configmap: |- # Placeholder for ConfigMap data
@@ -262,10 +262,6 @@ management:
     ##
     existingPVName: ""
 
-  ## @param management.dnsDomain DNS domain for the management component.
-  ##
-  dnsDomain: netbird.selfhosted
-
   ## @param management.livenessProbe for the management component.
   ##
   livenessProbe:
@@ -285,6 +281,16 @@ management:
     timeoutSeconds: 3
     tcpSocket:
       port: http
+
+  ## @param management.volumeMounts Volume mounts for the management pod.
+  volumeMounts: []
+  # - name: tmp
+  #   mountPath: /tmp
+
+  ## @param management.volumes volumes for the management pod.
+  volumes: []
+  # - name: tmp
+  #   emptyDir: {}
 
 ## @section NetBird Signal
 
@@ -424,7 +430,7 @@ signal:
   ##
   affinity: {}
 
-  ## @param management.livenessProbe for the signal component.
+  ## @param signal.livenessProbe for the signal component.
   ##
 
   livenessProbe:
@@ -433,13 +439,23 @@ signal:
     tcpSocket:
       port: grpc
 
-  ## @param dashboard.readinessProbe for the signal component.
+  ## @param signal.readinessProbe for the signal component.
   ##
   readinessProbe:
     initialDelaySeconds: 5
     periodSeconds: 5
     tcpSocket:
       port: grpc
+
+  ## @param signal.volumeMounts Volume mounts for the signal pod.
+  volumeMounts: []
+  # - name: tmp
+  #   mountPath: /tmp
+
+  ## @param signal.volumes volumes for the signal pod.
+  volumes: []
+  # - name: tmp
+  #   emptyDir: {}
 
 ## @section NetBird Relay Parameters
 
@@ -599,7 +615,7 @@ relay:
   ##
   affinity: {}
 
-  ## @param management.livenessProbe for the relay component.
+  ## @param relay.livenessProbe for the relay component.
   ##
   livenessProbe:
     initialDelaySeconds: 5
@@ -607,13 +623,23 @@ relay:
     tcpSocket:
       port: http
 
-  ## @param dashboard.readinessProbe for the relay component.
+  ## @param relay.readinessProbe for the relay component.
   ##
   readinessProbe:
     initialDelaySeconds: 5
     periodSeconds: 5
     tcpSocket:
       port: http
+
+  ## @param relay.volumeMounts Volume mounts for the relay pod.
+  volumeMounts: []
+  # - name: tmp
+  #   mountPath: /tmp
+
+  ## @param relay.volumes volumes for the relay pod.
+  volumes: []
+  # - name: tmp
+  #   emptyDir: {}
 
 dashboard:
   ## @param dashboard.enabled Enable or disable the NetBird dashboard component.
@@ -637,7 +663,7 @@ dashboard:
     pullPolicy: IfNotPresent
 
     ## @param image.tag image tag (immutable tags are recommended)
-    tag: "v2.9.0"
+    tag: "v2.13.1"
 
   ## @param imagePullSecrets image pull secrets
   imagePullSecrets: []
@@ -753,7 +779,7 @@ dashboard:
 
   lifecycle: {} # Define lifecycle hooks (preStop, postStart) if needed.
 
-  ## @param dashboard.livenessProbe for the management component.
+  ## @param dashboard.livenessProbe for the dashboard component.
   ##
   livenessProbe:
     periodSeconds: 5
@@ -761,7 +787,7 @@ dashboard:
       path: /
       port: http
 
-  ## @param dashboard.readinessProbe for the management component.
+  ## @param dashboard.readinessProbe for the dashboard component.
   ##
   readinessProbe:
     initialDelaySeconds: 5
@@ -770,6 +796,15 @@ dashboard:
       path: /
       port: http
 
+  ## @param dashboard.volumeMounts Volume mounts for the dashboard pod.
+  volumeMounts: []
+  # - name: tmp
+  #   mountPath: /tmp
+
+  ## @param dashboard.volumes volumes for the dashboard pod.
+  volumes: []
+  # - name: tmp
+  #   emptyDir: {}
 ## @section NetBird Extra Manifests to be included in the chart
 
 extraManifests: {}
