--- a/argocd-helm-charts/netbird/charts/netbird/templates/management-deployment.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/management-deployment.yaml
@@ -96,6 +96,9 @@ spec:
               name: config
             - mountPath: /var/lib/netbird
               name: management
+          {{- if .Values.management.volumeMounts }}
+          {{- .Values.management.volumeMounts | toYaml | nindent 12 }}
+          {{- end }}
       {{- with .Values.management.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -119,5 +122,7 @@ spec:
           {{- else }}
           emptyDir: {}
           {{- end }}
+          {{- if  .Values.management.volumes }}
+          {{- .Values.management.volumes | toYaml | nindent 8 }}
+          {{- end }}
 {{- end -}}
-
