--- a/argocd-helm-charts/netbird/charts/netbird/templates/relay-deployment.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/relay-deployment.yaml
@@ -74,6 +74,14 @@ spec:
                   key: {{ (split "/" $val)._1 }}
           {{- end }}
           {{- end }}
+          {{- if .Values.relay.volumeMounts }}
+          volumeMounts:
+          {{- .Values.relay.volumeMounts | toYaml | nindent 12 }}
+          {{- end }}
+      {{- if  .Values.relay.volumes }}
+      volumes:
+      {{- .Values.relay.volumes | toYaml | nindent 8 }}
+      {{- end }}
       {{- with .Values.relay.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
