--- a/argocd-helm-charts/netbird/charts/netbird/templates/signal-deployment.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/signal-deployment.yaml
@@ -62,6 +62,14 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.signal.resources | nindent 12 }}
+          {{- if .Values.signal.volumeMounts }}
+          volumeMounts:
+          {{- .Values.signal.volumeMounts | toYaml | nindent 12 }}
+          {{- end }}
+      {{- if  .Values.signal.volumes }}
+      volumes:
+      {{- .Values.signal.volumes | toYaml | nindent 8 }}
+      {{- end }}
       {{- with .Values.signal.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
