--- a/argocd-helm-charts/netbird/Chart.yaml
+++ b/argocd-helm-charts/netbird/Chart.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: netbird
     version: 1.8.0
     repository: https://netbirdio.github.io/helms
+  - name: coturn
+    version: 9.1.0
+    repository: https://small-hack.github.io/coturn-chart/
