--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
@@ -170,6 +170,37 @@ spec:
       owner: root:root
       path: /etc/systemd/system/containerd.service
       permissions: "0744"
+    {{- if eq .Values.mode "bare-metal" }}
+    {{/*
+      Netplan is the default network configuration utility on Ubuntu. It configures network
+      interfaces using YAML files, which are then translated into systemd-networkd or
+      NetworkManager configurations.
+
+      Using Netplan, we'll bind the Floating IP with the master node's primary network interface.
+    */}}
+    - content: |
+        #!/bin/bash
+        wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+        chmod a+x /usr/local/bin/yq
+
+        interface_name=$(/usr/local/bin/yq '.network.ethernets | keys | .[0]' /etc/netplan/01-netcfg.yaml)
+
+        touch /etc/netplan/60-floating-ip.yaml && chmod 600 /etc/netplan/60-floating-ip.yaml
+        cat <<EOT > /etc/netplan/60-floating-ip.yaml
+        network:
+          version: 2
+          renderer: networkd
+          ethernets:
+            $interface_name:
+              addresses:
+                - {{ (.Values.controlPlane.bareMetal.endpoint).host }}/32
+        EOT
+
+        netplan apply
+      owner: root:root
+      path: /bind-floating-ip.sh
+      permissions: "0744"
+    {{- end }}
     initConfiguration:
       skipPhases:
         - addon/kube-proxy
@@ -213,13 +244,37 @@ spec:
       - export CONTAINERD=2.1.3
       - export RUNC=1.2.5
       - export KUBERNETES_VERSION=$(echo {{ $.Values.global.kubernetes.version }} | sed 's/^v//')
-      - export TRIMMED_KUBERNETES_VERSION=$(echo ${KUBERNETES_VERSION} | sed 's/^v//'
-        | awk -F . '{print $1 "." $2}')
+      - export TRIMMED_KUBERNETES_VERSION=$(echo ${KUBERNETES_VERSION} | sed 's/^v//' | awk -F . '{print $1 "." $2}')
       - ARCH="$(dpkg --print-architecture)"
       - localectl set-locale LANG=en_US.UTF-8
       - localectl set-locale LANGUAGE=en_US.UTF-8
       - apt-get update -y
       - apt-get -y install at jq unzip wget socat mtr logrotate apt-transport-https
+
+      {{- if eq .Values.mode "bare-metal" }}
+
+      {{/*
+        On the first master node (where 'kubeadm init' is executed),
+        we need to have this netplan config in effect, before 'kubeadm init' execution. Otherwise,
+        preflight checks will fail and 'kubeadm init' won't succeed.
+
+        On the second and other remaining master nodes, after 'kubeadm join' is executed,
+        we will create and apply this same netplan config.
+        If we have this netplan config before executing 'kubeadm join', then the Floating IP
+        will be attached to its own primary network interface as well. Which will cause it to
+        loopback to itself, instead of reaching out to the first master node.
+      */}}
+      - |
+        [ ! -f /run/kubeadm/kubeadm-join-config.yaml ] && \
+          chmod +x /bind-floating-ip.sh && \
+          /bind-floating-ip.sh
+
+      {{/* BUG : The kubeadm-join-config.yaml gets removed before 'kubeadm join' execution. */}}
+      - |
+        [ -f /run/kubeadm/kubeadm-join-config.yaml ] && \
+          cp /run/kubeadm/kubeadm-join-config.yaml /kubeadm-join-config.yaml
+      {{- end }}
+
       - sed -i '/swap/d' /etc/fstab
       - swapoff -a
       - modprobe overlay && modprobe br_netfilter && sysctl --system
@@ -238,8 +293,7 @@ spec:
       - sed -i  "s/SystemdCgroup = false/SystemdCgroup = true/" /etc/containerd/config.toml
       - systemctl daemon-reload && systemctl enable containerd && systemctl start containerd
       - mkdir -p /etc/apt/keyrings/
-      - curl -fsSL https://pkgs.k8s.io/core:/stable:/v$TRIMMED_KUBERNETES_VERSION/deb/Release.key
-        | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+      - curl -fsSL https://pkgs.k8s.io/core:/stable:/v$TRIMMED_KUBERNETES_VERSION/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
       - echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v$TRIMMED_KUBERNETES_VERSION/deb/
         /" | sudo tee /etc/apt/sources.list.d/kubernetes.list
       - apt-get update
@@ -250,7 +304,25 @@ spec:
       - echo 'source <(kubectl completion bash)' >>/root/.bashrc
       - echo 'export KUBECONFIG=/etc/kubernetes/admin.conf' >>/root/.bashrc
       - apt-get -y autoremove && apt-get -y clean all
+
+      {{/* BUG : The kubeadm-join-config.yaml gets removed before 'kubeadm join' execution. */}}
+      {{- if eq .Values.mode "bare-metal" }}
+      - |
+        [ -f /kubeadm-join-config.yaml ] && \
+          mkdir -p /var/run/kubeadm && \
+          cp /kubeadm-join-config.yaml /run/kubeadm/kubeadm-join-config.yaml
+      {{- end }}
+
     postKubeadmCommands:
+      {{/* On the second or remaining master nodes, after 'kubeadm join' execution,
+           we create and apply the netplan config. */}}
+      {{- if eq .Values.mode "bare-metal" }}
+      - |
+        [ -f /run/kubeadm/kubeadm-join-config.yaml ] && \
+          chmod +x /bind-floating-ip.sh && \
+          /bind-floating-ip.sh
+      {{- end }}
+
       # Install Helm.
       - curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
