--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineDeployment.yaml
@@ -46,7 +46,7 @@ spec:
 {{- end }}
 
 {{/* Handling node-groups in Hetzner Bare Metal. */}}
-{{- if eq .Values.mode "bare-metal" }}
+{{- if or (eq .Values.mode "bare-metal") (eq .Values.mode "hybrid") }}
 {{- range $nodeGroupIndex, $nodeGroup := $.Values.nodeGroups.bareMetal }}
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
