feat(capi-cluster/hetzner) : ClusterAPI managed cloud-provider label for each node
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HCloudMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HCloudMachineTemplate.yaml
@@ -6,6 +6,9 @@ metadata:
   name: {{ .Values.global.clusterName }}-control-plane
 spec:
   template:
+    metadata:
+      labels:
+        node.cluster.x-k8s.io/cloud-provider: hcloud
     spec:
       imageName: {{ .Values.hcloud.imageName }}
       placementGroupName: control-plane
@@ -22,6 +25,9 @@ metadata:
   name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
 spec:
   template:
+    metadata:
+      labels:
+        node.cluster.x-k8s.io/cloud-provider: hcloud
     spec:
       imageName: {{ $.Values.hcloud.imageName }}
       placementGroupName: {{ $nodeGroup.name }}
