fix: change the harbor logical backup retention time type to string
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/harbor/templates/postgresql-logical-backup.yaml
+++ b/argocd-helm-charts/harbor/templates/postgresql-logical-backup.yaml
@@ -78,7 +78,7 @@ spec:
                 - name: LOGICAL_BACKUP_S3_BUCKET
                   value: {{ (.Values.postgres.logicalbackup).s3bucket }}
                 - name: LOGICAL_BACKUP_S3_RETENTION_TIME
-                  value: {{ (.Values.postgres.logicalbackup).retention }}
+                  value: "{{ (.Values.postgres.logicalbackup).retention }}"
               {{- end }}
 
                 - name: PG_VERSION
